--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 <!-- CSS -->
-<link rel="stylesheet" href="index.css"> 
+<link rel="stylesheet" href="index.css">
 
 <!-- FONTS IMPORTING -->
 <link href="https://fonts.googleapis.com/icon?family=Day+Roman" rel="stylesheet">
@@ -32,15 +32,15 @@
 <div class="nav">
 <a href="#" id="menu-icon"></a>
 <ul id="navlinks">
-<li><a href="#workflow"><img src="img/nav/menu/workflow.png"> Workflow</a></li> 
-<li><a href="#methodology"><a href="#workflow"><img src="img/nav/menu/methodology.png"> Methodology</a></li> 
-<li><a href="#portfolio"><img src="img/nav/menu/portfolio.png"> Portfolio</a></li> 
-<li><a href="#media"><img src="img/nav/menu/media.png"> Media</a></li> 
-<li><a href="#community"><img src="img/nav/menu/community.png"> Community</a></li>
-<li><a href="https://donorbox.org/ecumenic" class="custom-dbox-popup"><img src="img/nav/menu/donate.png"> Donate</a></li> 
-<li><a href="#investment"><img src="img/nav/menu/invest.png"> Invest</a></li> 
-<li><a href="#contact"><img src="img/nav/menu/contact.png"> Contact</a></li> 
-<li><a href="https://www.microsofttranslator.com/bv.aspx?from=&to=pt&a=https%3A%2F%2Fecumenic.github.io"><img src="img/nav/menu/translate.png"> Translate</a></li></ul></div></div>
+<li><a href="#about"><img src="img/navmenu/about.png"> About</a></li> 
+<li><a href="#methodology"><a href="#workflow"><img src="img/navmenu/methodology.png"> Methodology</a></li> 
+<li><a href="#portfolio"><img src="img/navmenu/portfolio.png"> Portfolio</a></li> 
+<li><a href="#media"><img src="img/navmenu/media.png"> Social Media</a></li> 
+<li><a href="#community"><img src="img/navmenu/community.png"> Community</a></li>
+<li><a href="https://donorbox.org/ecumenic" class="custom-dbox-popup"><img src="img/navmenu/donate.png"> Donate</a></li> 
+<li><a href="#investment"><img src="img/navmenu/invest.png"> Invest</a></li> 
+<li><a href="#contact"><img src="img/navmenu/contact.png"> Contact</a></li> 
+<li><a href="https://www.microsofttranslator.com/bv.aspx?from=&to=pt&a=https%3A%2F%2Fecumenic.github.io"><img src="img/navmenu/translate.png"> Translate</a></li></ul></div></div>
 
 <!-- NAVLINKS -->
 <div class="navlinks">
@@ -49,8 +49,7 @@
 <a href="http://bit.ly/ecumenic-channel"><img src="img/nav/youtube.png"></a>
 <a href="https://github.com/ecumenic/project"><img src="img/nav/github.png"></a>
 <a href="https://www.linkedin.com/company/ecumenic"><img src="img/nav/linkedin.png"></a>
-<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup"><img src="img/nav/donate.png"></a>
-</div>
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup"><img src="img/nav/donate.png"></a></div>
 <div class="navlinks-mobile">
 <a></a>
 <br><br><a href="https://instagram.com/ecumenictimes"><img src="img/nav/instagram.png"></a>
@@ -61,16 +60,77 @@
 <br><a href="https://donorbox.org/ecumenic" class="custom-dbox-popup"><img src="img/nav/donate.png"></a></div>
 
 <!-- HEADER -->
-<div id="project" class="section" style="background-image:url('img/bg.jpg')">
-<div class="row">
-<img class="header" src="img/header/logo.png">
-<img class="header-mobile" src="img/header/logo-mobile.png">
+<div id="project" class="parallax" style="background-image:url('img/bg.jpg')">
+<div class="header">
+<img class="logo" src="img/header/logo.png">
+<img class="logo-mobile" src="img/header/logo-mobile.png">
 <h1>Ecumenic Creative Operations</h1>
 <h2>Interfaith-Based Laic-Compliant Cultural Development</h2>
 <h3>A Compassionate Sustainable Peacebuilding Inclusiveful 
 <br>Collaborative Open-Source Art Studio & Opera Company</h3>
-<a class="button" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/header/button-project.png"> Download Project</a>◇<a href="#workflow" class="button"><img src="img/header/button-learn.png"> Learn More Online</a></div>
+<a class="call" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/buttons/project.png"> Download Project</a>
+<a href="#about" class="call"><img src="img/buttons/learn.png"> Learn More Online</a></div></div>
 
+<!-- ABOUT -->
+<div id="about" class="container">
+<div class="row">
+<div class="col img-div" style="background-image:url('img/loader.gif')">
+<img src="img/ecumenic.gif"></div>
+<div class="col">
+<h3>Collaborative Productions:</h3>
+<p>To value interfaith creative ecosystem regenerativity we developed our sustainable auditorable inclusive cultural operations partnership open-source project and scalable institutional plan through reliability-engineering.</p>
+<div class="col button-div">
+<a class="button" href="#" target="_blank">
+<img src="img/buttons/compliance.png"> Laicity Compliance</a> 
+<a class="button" href="#" target="_blank">
+<img src="img/buttons/collaborations.png"> Collaborations Workflow</a> 
+<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING" target="_blank">
+<img src="img/buttons/contributions.png"> Contributions Guidelines</a></div></div></div>
+
+<div class="row">
+<div class="col img-div" style="background-image:url('img/loader.gif')">
+<img src="img/ecumenic.gif"></div>
+<div class="col">
+<h3>Institutional Workflow:</h3> 
+<p>Organized as a transparent inclusive scalable dignified cultural productions collaborative startup we value admnistrative accountable transparent auditorship.</p>
+<div class="col button-div">
+<a class="button" href="https://github.com/ecumenic/project/blob/master/README" target="_blank">Corporative Statute</a> 
+<a class="button" href=""  target="_blank">Organizational Architecture</a> 
+<a href="" class="button" target="_blank">Co-Production Process</a> 
+<a href="" class="button" target="_blank">Audit Procurement</a> 
+<a href="" class="button" target="_blank">Accountable Auditorship</a></p></div></div></div>
+
+<div class="row">
+<div class="col img-div" style="background-image:url('img/loader.gif')">
+<img src="img/ecumenic.gif"></div>
+<div class="col">
+<h3>Reliability Engineering:</h3> 
+<p>We base our co-productions and enterprise in rule-of-law global ethic laic and interfaith compliant standards charters from which we designed our institutional commitments and legislative policies.</p>
+<div class="col button-div">
+<a class="button" href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="_blank">Code Of Conducts</a> 
+<a class="button"  href="https://github.com/ecumenic/project/blob/master/STANDARDS_CHARTERS" target="_blank">Standards Compliance</a> 
+<a class="button"  href="https://github.com/ecumenic/project/blob/master/LICENSE" target="_blank">Creative Commons License</a> 
+<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRACT"  target="_blank">Contract Model</a></div></div></div>
+
+<div class="row">
+<div class="col img-div" style="background-image:url('img/loader.gif')">
+<img src="img/ecumenic.gif"></div>
+<div class="col">
+<h3>Co-Creative Process:</h3> 
+<p>Our ecologic sustainable cultural creative process is conceived as flexible modular programs to fit distinct time-lengths and site specificities in dialogue with your reality respectfully utilizing the most advanced techonologies and methodologies, but may develop into a progressive course.</p>
+<div class="col button-div">
+<a class="button" href="">Progressive Course</a> 
+<a class="button" href="#methodology">Methodology</a> <a class="button" href="#portfolio">Portfolio</a> 
+<a class="button" href="#media">Media</a></p></div></div></div>
+
+<div class="row" align="center">
+<a class="custom-dbox-popup call"href="https://donorbox.org/ecumenic">Support Us</a> 
+<a class="call" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank">
+<img src="img/buttons/project.png"> Download Project</a>
+<a class="call" href="#investment">Contract Us</a> 
+</div>
+
+</div>
 
 </body>
 
