--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <img src="img/nav/peaceculture.png"></div>
 
 <!-- HEADER -->
-<div id="project" class="parallax" style="background-image:url('')">
+<div id="project" class="parallax" style="background-image:url('img/header/bg.png')">
 <div class="header">
 <img class="logo" src="img/header/logo.png">
 <img class="logo-mobile" src="img/header/logo-mobile.png">
@@ -51,15 +51,21 @@
 <h3>Collaborative Open-Source Art Studio & Opera Company</h3>
 <a href="https://ourworldindata.org/sdg-tracker-update">
 <img src="img/header/sdg.png"></a> 
+<a href="https://support.peta.org/page/1763/petition" target="_blank">
+<img src="img/header/veganpledge.png"></a>
+<a href="https://github.com/ecumenic/project/blob/master/certifications/The%20Researchers%20Pledge.pdf" target="_blank">
+<img src="img/header/researcherspledge.png"></a>
+<a href="https://github.com/ecumenic/project/blob/master/certifications/Religious%20Freedom%20Corporate%20Pledge.pdf" target="_blank">
+<img src="img/header/rfbf.png"></a>
+<a href="https://github.com/ecumenic/project/blob/master/certifications/The%20Tech%20Pledge.pdf" target="_blank"><img src="img/header/techpledge.png"></a>
+<br>
+<a href="https://sites.google.com/view/drops-platform/home" target="_blank">
+<img src="img/header/drops.png"></a> 
 <a href="https://gdpr.eu/checklist/" target="_blank">
 <img src="img/header/gdpr.png"></a> 
 <a href="https://en.wikipedia.org/wiki/Motion_picture_content_rating_system" target="_blank">
-<img src="img/header/pg.png"></a> 
-<a href="https://github.com/ecumenic/project/blob/master/Religious%20Freedom%20Corporate%20Pledge.pdf" target="_blank">
-<img src="img/header/rfbf.png"></a>
-<a href="https://www.techpledge.org" target="_blank"><img src="img/header/techpledge.png"></a>
-<br>
-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
+<img src="img/header/pg.png"></a> <a href="https://en.wikipedia.org/wiki/Open_educational_resources" target="_blank">
+<img src="img/header/oer.png"></a> <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
 <img src="img/header/cc.png"></a>
 </div></div>
 
@@ -204,10 +210,14 @@
 <div id="contact" class="container">
 <h4>Contact</h4>
 <h5>
-ecumenic@protonmail.com
+<img src="img/photos/contact-link.png">
 <br><a href="https://github.com/ecumenic" target="_blank">GitHub</a> ◇ 
 <a href="https://linkedin.com/company/ecumenic"target="_blank">LinkedIn</a> ◇ 
-<a href="https://m.me/ecumenictimes" target="_blank">Messenger</a></h5>
+<a href="https://m.me/ecumenictimes" target="_blank">Messenger</a>
+<br>&nbsp</h5>
+</div>
+
+<div class="parallax" v-align="center" style="background-image:url('img/photos/contact.png')" onclick="location.href='#contact');">
 </div>
 
 <!-- FOOTER NAV -->
@@ -236,22 +246,23 @@ ecumenic@protonmail.com
 
 <!-- SOCIAL MEDIA -->
 <div id="socialmedia" class="container socialmedia">
-<a href="https://network.creativecommons.org" target="_blank" title=""><img src="img/socialmedia/creativecommons.png"></a> 
-<a href="https://twitter.com/ecumenictimes" target="_blank" title=""><img src="img/socialmedia/twitter.png"></a> 
-<a href="https://medium.com/@ecumenictimes" target="_blank" title=""><img src="img/socialmedia/medium.png"></a> 
-<a href="https://instagram.com/ecumenictimes" target="_blank" title=""><img src="img/socialmedia/instagram.png"></a> 
-<a href="https://flickr.com/photos/ecumenic/albums" target="_blank" title=""><img src="img/socialmedia/flickr.png"></a> 
-<a href="https://anchor.fm/ecumenictimes" target="_blank" title=""><img src="img/socialmedia/anchor.png"></a> 
-<a href="https://ecumenic.bandcamp.com/" target="_blank" title=""><img src="img/socialmedia/bandcamp.png"></a> 
-<a href="http://bit.ly/ecumenic-channel" target="_blank" title=""><img src="img/socialmedia/youtube.png"></a> 
-<a href="https://github.com/ecumenic/project" target="_blank" title=""><img src="img/socialmedia/github.png"></a> 
-<a href="https://www.linkedin.com/company/ecumenic" target="_blank" title=""><img src="img/socialmedia/linkedin.png"></a> 
-<a href="https://www.facebook.com/pg/ecumenictimes/events" target="_blank" title=""><img src="img/socialmedia/facebook.png"></a> 
-<a href="https://ecumenictimes.threadless.com" target="_blank" title=""><img src="img/socialmedia/threadless.png"></a> 
-<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title=""><img src="img/socialmedia/faircoin.png"></a> 
-<a href="mailto:ecumenic-subscribe@lists.riseup.net" target="_blank" title=""><img src="img/socialmedia/riseup.png"></a> 
-<a href="mailto:ecumenic@protonmail.com" target="_blank" title=""><img src="img/socialmedia/protonmail.png"></a> 
-<a href="https://m.me/ecumenictimes" target="_blank" title=""><img src="img/socialmedia/messenger.png"></a></div>
+<a href="https://network.creativecommons.org" target="_blank" title="Ecumenic Times Creative Commons Network"><img src="img/socialmedia/creativecommons.png"></a> 
+<a href="https://twitter.com/ecumenictimes" target="_blank" title="Ecumenic Times Twitter"><img src="img/socialmedia/twitter.png"></a> 
+<a href="https://medium.com/@ecumenictimes" target="_blank" title="Ecumenic Times Medium"><img src="img/socialmedia/medium.png"></a> 
+<a href="https://instagram.com/ecumenictimes" target="_blank" title="Ecumenic Times Instagram"><img src="img/socialmedia/instagram.png"></a> 
+<a href="https://flickr.com/photos/ecumenic/albums" target="_blank" title="Ecumenic Times Flickr"><img src="img/socialmedia/flickr.png"></a> 
+<a href="https://anchor.fm/ecumenictimes" target="_blank" title="Ecumenic Times Podcast"><img src="img/socialmedia/anchor.png"></a> 
+<a href="https://ecumenic.bandcamp.com/" target="_blank" title="Ecumenic Times Bandcamp"><img src="img/socialmedia/bandcamp.png"></a> 
+<a href="http://bit.ly/ecumenic-channel" target="_blank" title="Ecumenic Times Youtube Channel"><img src="img/socialmedia/youtube.png"></a> 
+<a href="https://github.com/ecumenic" target="_blank" title="Ecumenic Creative Operations GitHub Repository"><img src="img/socialmedia/github.png"></a> 
+<a href="https://www.linkedin.com/company/ecumenic" target="_blank" title="Ecumenic Creative Operations LinkedIn"><img src="img/socialmedia/linkedin.png"></a> 
+<a href="https://www.facebook.com/pg/ecumenictimes/events" target="_blank" title="Ecumenic Times Events Facebook Page"><img src="img/socialmedia/facebook.png"></a> 
+<a href="https://ecumenictimes.threadless.com" target="_blank" title="Ecumenic Times Threadless Shop"><img src="img/socialmedia/threadless.png"></a> 
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At Donorbox"><img src="img/socialmedia/donorbox.png"></a>
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At FairCoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9"<img src="img/socialmedia/faircoin.png"></a> 
+<a href="mailto:ecumenic-subscribe@lists.riseup.net" target="_blank" title="Ecumenic Times Riseup List Subscription"><img src="img/socialmedia/riseup.png"></a> 
+<a href="#contact" title="Ecumenic Creative Operations Protonmail"><img src="img/socialmedia/protonmail.png"></a> 
+<a href="https://m.me/ecumenictimes" target="_blank" title="Ecumenic Times Messenger"><img src="img/socialmedia/messenger.png"></a></div>
 
 </body>
 
