--- a/index.html
+++ b/index.html
@@ -256,7 +256,14 @@
 <a href="http://bit.ly/ecumenic-channel" target="_blank" title="Ecumenic Times Youtube Channel"><img src="img/socialmedia/youtube.png"></a> 
 <a href="https://github.com/ecumenic" target="_blank" title="Ecumenic Creative Operations GitHub Repository"><img src="img/socialmedia/github.png"></a> 
 <a href="https://www.linkedin.com/company/ecumenic" target="_blank" title="Ecumenic Creative Operations LinkedIn"><img src="img/socialmedia/linkedin.png"></a> 
-<a href="https://www.facebook.com/pg/ecumenictimes/events" target="_blank" title="Ecumenic Times Events Facebook Page"><img src="img/socialmedia/facebook.png"></a> 
+<a href="https://www.facebook.com/pg/ecumenictimes/events" target="_blank" title="Ecumenic Times Events Facebook Page"><img src="img/socialmedia/facebook.png"></a>
+<a href="https://ecumenictimes.threadless.com" target="_blank" title="Ecumenic Times Threadless Shop"><img src="img/socialmedia/threadless.png"></a> 
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At Donorbox"><img src="img/socialmedia/donorbox.png"></a>
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At FairCoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9"<img src="img/socialmedia/faircoin.png"></a> 
+<a href="mailto:ecumenic-subscribe@lists.riseup.net" target="_blank" title="Ecumenic Times Riseup List Subscription"><img src="img/socialmedia/riseup.png"></a> 
+<a href="#contact" title="Ecumenic Creative Operations Protonmail"><img src="img/socialmedia/protonmail.png"></a> 
+<a href="https://m.me/ecumenictimes" target="_blank" title="Ecumenic Times Messenger"><img src="img/socialmedia/messenger.png"></a></div>
+<div id="socialmediamobile" class="container socialmedia socialmediamobile">
 <a href="https://ecumenictimes.threadless.com" target="_blank" title="Ecumenic Times Threadless Shop"><img src="img/socialmedia/threadless.png"></a> 
 <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At Donorbox"><img src="img/socialmedia/donorbox.png"></a>
 <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At FairCoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9"<img src="img/socialmedia/faircoin.png"></a> 
