--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
 <br>&nbsp</h5>
 </div>
 
-<div class="parallax" v-align="center" style="background-image:url('img/photos/contact.png')" onclick="location.href='#contact');">
+<!-- PHOTO -->
+<div class="photo" v-align="center" style="background-image:url('img/photos/contact.png')" onclick="location.href='#contact');">
 </div>
 
 <!-- FOOTER NAV -->
@@ -234,15 +235,13 @@
 
 <!-- CREDITS -->
 <br><br><span><b>Crafted With:</b> 
-<a href="https://www.gnu.org" target="_blank">GNU</a> <a href="https://www.linuxfoundation.org/" target="_blank">Linux</a>, 
+<i><a href="https://www.gnu.org" target="_blank">GNU</a> <a href="https://www.linuxfoundation.org/" target="_blank">Linux</a>, 
 <a href="https://gitlab.gnome.org/GNOME/gedit/" target="_blank">Gedit</a>, 
 <a href="https://www.gimp.org" target="_blank">GIMP</a>, 
 <a href="https://kbrsh.github.io/wing/" rel="nofollow" target="_blank">Wing CSS Framework</a>,
-<a target="_blank" href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a>, 
-<a href="https://www.flaticon.com/authors/pixel-perfect" target="_blank">PixelPerfect Social Icons</a>, 
-<a href="https://thenounproject.com" target="_blank"> Noun Project Icons</a>, and  
-<a href="https://commons.wikimedia.org/wiki/Main_Page" target="_blank">Wikimedia Commons Images</a></i></span>
-<br><br><b><i>All praises and glories to God.</i></b></h5><br><br><br><br></div>
+<a target="_blank" href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a>, and
+<a href="https://www.flaticon.com/authors/pixel-perfect" target="_blank">PixelPerfect Social Icons</a></i></span>
+<br><br><b><i>All praises and glories to God.</i></b><br><br><br><br>&nbsp</h5></div>
 
 <!-- SOCIAL MEDIA -->
 <div id="socialmedia" class="container socialmedia">
@@ -259,14 +258,18 @@
 <a href="https://www.facebook.com/pg/ecumenictimes/events" target="_blank" title="Ecumenic Times Events Facebook Page"><img src="img/socialmedia/facebook.png"></a>
 <a href="https://ecumenictimes.threadless.com" target="_blank" title="Ecumenic Times Threadless Shop"><img src="img/socialmedia/threadless.png"></a> 
 <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At Donorbox"><img src="img/socialmedia/donorbox.png"></a>
-<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At FairCoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9"<img src="img/socialmedia/faircoin.png"></a> 
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At FairCoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9"><img src="img/socialmedia/faircoin.png"></a> 
 <a href="mailto:ecumenic-subscribe@lists.riseup.net" target="_blank" title="Ecumenic Times Riseup List Subscription"><img src="img/socialmedia/riseup.png"></a> 
 <a href="#contact" title="Ecumenic Creative Operations Protonmail"><img src="img/socialmedia/protonmail.png"></a> 
 <a href="https://m.me/ecumenictimes" target="_blank" title="Ecumenic Times Messenger"><img src="img/socialmedia/messenger.png"></a></div>
+<!-- MOBILE SOCIAL MEDIA -->
 <div id="socialmediamobile" class="container socialmedia socialmediamobile">
+<a href="https://github.com/ecumenic" target="_blank" title="Ecumenic Creative Operations GitHub Repository"><img src="img/socialmedia/github.png"></a> 
+<a href="https://www.linkedin.com/company/ecumenic" target="_blank" title="Ecumenic Creative Operations LinkedIn"><img src="img/socialmedia/linkedin.png"></a> 
+<a href="https://www.facebook.com/pg/ecumenictimes/events" target="_blank" title="Ecumenic Times Events Facebook Page"><img src="img/socialmedia/facebook.png"></a>
 <a href="https://ecumenictimes.threadless.com" target="_blank" title="Ecumenic Times Threadless Shop"><img src="img/socialmedia/threadless.png"></a> 
 <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At Donorbox"><img src="img/socialmedia/donorbox.png"></a>
-<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At FairCoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9"<img src="img/socialmedia/faircoin.png"></a> 
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup" title="Donate For Us At FairCoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9"><img src="img/socialmedia/faircoin.png"></a> 
 <a href="mailto:ecumenic-subscribe@lists.riseup.net" target="_blank" title="Ecumenic Times Riseup List Subscription"><img src="img/socialmedia/riseup.png"></a> 
 <a href="#contact" title="Ecumenic Creative Operations Protonmail"><img src="img/socialmedia/protonmail.png"></a> 
 <a href="https://m.me/ecumenictimes" target="_blank" title="Ecumenic Times Messenger"><img src="img/socialmedia/messenger.png"></a></div>
