--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <h5>
 <a href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/buttons/project.png"></a></h5>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/icons/download.png"> Read The Full Project</a>
+<a class="button" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/icons/document.png"> Read The Full Project</a>
 <br><span>Ecumenic Creative Operations Project.pdf</span></div></div></div>
 
 <!-- METHODOLOGY -->
@@ -93,17 +93,17 @@
 <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecosystem.pdf" target="_blank">
 <img src="img/buttons/ecosystem.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecosystem.pdf" target="_blank"><img src="img/icons/download.png"> Ecumenic Ecosystem</a>
+<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecosystem.pdf" target="_blank"><img src="img/icons/document.png"> Ecumenic Ecosystem</a>
 <br><span>Trends Indicators Report</span></div>
 <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecomuseology.pdf" target="_blank">
 <img src="img/buttons/ecomuseology.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecomuseology.pdf" target="_blank"><img src="img/icons/download.png"> Ecumenic Ecomuseology</a>
+<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecomuseology.pdf" target="_blank"><img src="img/icons/document.png"> Ecumenic Ecomuseology</a>
 <br><span>Educational Program</span></div> 
 <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf" target="_blank">
 <img src="img/buttons/ecocreativity.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf"><img src="img/icons/download.png"> Ecumenic Creativity</a>
+<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf"><img src="img/icons/document.png"> Ecumenic Creativity</a>
 <br><span>Ecoaesthetic Treatise</span></div>
 </div></div>
 
@@ -188,22 +188,22 @@
 <p><b>Our Foundation Commitments: </b>The Ecumenic Creative Operations Community at 08.02.2019, Opera Day, declares that through the professional ecosystemic path of our founder and its resulting research we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God laic-compliant interfaith crosscultural ecumenic company that could foster a peacebuilding culture sustainability economy development. To respond to the multilevel governance complexity implied in the glocal fair-trade compliant stablishment of a dignified compassionate art respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source operations reliability engineering technologies in our own creative processes searching for an entrepeneurial consentment. The starting Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary interfaith-basement laic-compliant art in accordance to global ethic ecologic regenerative standards charters such as the United Nations Sustainable Development Goals, the UNESCO Cultural Heritage Safegaurd Agenda, and the ICOM Ecomuseology.</p></div>
 <div class="row">
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/README" target="_blank">Community Statement</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/README" target="_blank"><img src="img/icons/document.png"> Community Statement</a>
 <br><span>Our Readme File</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/STANDARDS_CHARTERS" target="_blank">Standards Compliance</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/STANDARDS_CHARTERS" target="_blank"><img src="img/icons/document.png"> Standards Compliance</a>
 <br><span>Global Laic & Faith-Inspired Charters </span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="_blank">Code Of Conduct</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="_blank"><img src="img/icons/document.png"> Code Of Conduct</a>
 <br><span>Enterprise Ethics</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING" target="_blank">Contributions Guidelines</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING" target="_blank"><img src="img/icons/document.png"> Contributions Guidelines</a>
 <br><span>How To Join Us</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRACT" target="_blank">Contract Model</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/CONTRACT" target="_blank"><img src="img/icons/document.png"> Contract Model</a>
 <br><span>Juridic Template</span></div>
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/blob/master/LICENSE" target="_blank">License Agreement</a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/LICENSE" target="_blank"><img src="img/icons/document.png"> License Agreement</a>
 <br><span><a href="https://en.wikipedia.org/wiki/Creative_Commons" target="_blank">Creative Commons</a> 4.1</span></div></div>
 <div class="row">
 <h5><a href="https://linkedin.com/in/operarioribeiro" target="_blank">
@@ -217,37 +217,40 @@
 <div class="row">
 <p><b>Our Growth Plans: </b> Currently we are looking for ethic excellence model collaborative programs to co-create state-of-art multimedia documented processes of our sustainable regenerative programs meanwhile developing a data-scientific analysis of our culturechain applying our methodologies to our ecosystemic workflow knowledge researching technologic bases for a set of informational open-source cultural reliability technologies such as an interfaith laic-compliant crosscultural translator.</p>
 <p><b>Sponsor Us: </b> If you love our enterprise, trust our mission and policies kindly share it with anyone who may assist us or use it for compassionate peacebuilding, buy our products, contract us or connect us to potential partners, and propose improvements contributions.</p>
-<p><b>Invest In Us: </b> Find a sample of our analysis, counterparts, investment opportunities, contracting and budget engineering procedures detailed in our <a href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf">project</a>.</p></div>
+<p><b>Invest In Us: </b> Decide reading a sample of our analysis, counterparts, investment opportunities, contracting and budget engineering procedures detailed in our <a href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf">project</a> and <a href="#contact">contact us</a>.</p></div>
 <div class="row">
 <div class="col">
-<a class="button" href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank">Read Our Full Project</a>
-<br><span>Ecumenic Creative Operations Project.pdf</span></div>
+<a class="custom-dbox-popup" href="https://donorbox.org/ecumenic"><img src="img/buttons/donorbox.png"></a>
+<br><a class="custom-dbox-popup button" href="https://donorbox.org/ecumenic"><img src="img/icons/donorbox.png"> Donate</a>
+<br><span>Donate on <a href="https://en.wikipedia.org/wiki/DonorBox" target="_blank">DonorBox</a> or <a href="https://fair-coin.org/en" target="_blank">FairCoin</a></span></div>
 <div class="col">
-<a class="custom-dbox-popup button" href="https://donorbox.org/ecumenic">Donate</a>
-<br><span><a href="https://en.wikipedia.org/wiki/DonorBox" target="_blank">DonorBox</a> or <a href="https://fair-coin.org/en" target="_blank">FairCoin</a> Transfer for fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9</span></div>
-<div class="col">
-<a class="button" href="https://ecumenictimes.threadless.com" target="_blank">Buy Our Products</a>
+<a href="https://ecumenictimes.threadless.com" target="_blank"><img src="img/buttons/shop.png"></a>
+<br><a class="button" href="https://ecumenictimes.threadless.com" target="_blank"><img src="img/icons/threadless.png"> Buy Our Products</a>
 <br><span><a href="https://en.wikipedia.org/wiki/Threadless" target="_blank">Threadless</a> Shop</span></div>
 <div class="col">
-<a class="button" href="https://ecumenic.typeform.com/to/LeIdRS" target="_blank">Propose A Partnership</a>
-<br><span>Easy Briefing <a href="https://en.wikipedia.org/wiki/Typeform_(service)" target="_blank">Typeform</a> or <a href="#contact">Mail Us</a></span></div>
+<a href="#contact"><img src="img/buttons/proposal.png"></a>
+<br><a class="button" href="#contact"><img src="img/icons/protonmail.png"> Propose A Partnership</a>
+<br><span>Mail by <a href="https://www.protonmail.com" target="_blank">Protonmail</a></span></div>
 <div class="col">
-<a class="button" href="mailto:ecumenic-subscribe@lists.riseup.net" target="_blank">Receive Our Newsletter</a>
-<br><span><a href="https://en.wikipedia.org/wiki/Riseup" target="_blank">RiseUp</a> Mailing List</span></div>
-<div class="col">
-<a class="button" href="https://ecumenic.typeform.com/to/yrdy3e" target="_blank">Send Collaborations</a>
-<br><span>Easy Collaboration <a href="https://en.wikipedia.org/wiki/Typeform_(service)" target="_blank">Typeform</a></span></div></div></div>
+<a href="#community"target="_blank"><img src="img/buttons/collaborate.png"></a>
+<br><a class="button" href="#community" target="_blank"><img src="img/icons/github.png"> Send Collaborations</a>
+<br><span><a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">GitHub</a> Development Platform</span></div></div></div>
 
 <!-- CONTACT -->
 <div id="contact" class="container">
 <h4>Contact</h4>
+<div class="row">
 <h5>
-<img src="img/buttons/contact-link.png">
+<a href="" target="_blank"><img src="img/buttons/contact.png"></a></h5>
+<h5><img src="img/buttons/contact-link.png">
 <br><a href="https://github.com/ecumenic" target="_blank">GitHub</a> ◇ 
 <a href="https://linkedin.com/company/ecumenic"target="_blank">LinkedIn</a> ◇ 
 <a href="https://m.me/ecumenictimes" target="_blank">Messenger</a>
-<br>&nbsp</h5>
-</div>
+<br>&nbsp
+<br>
+<b>Receive Our Newsletter Mailing To:</b>
+<br><a href="mailto:ecumenic-subscribe@lists.riseup.net">ecumenic-subscribe@lists.riseup.net</a></h5>
+</div></div></div>
 
 <!-- PHOTO -->
 <div class="photo" style="background-image:url('img/photos/contact.png')" onclick="location.href='#contact');">
