--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
 <a class="button" href="http://instagram.com/ecumenictimes" target="_blank"><img src="img/icons/instagram.png"> Ecumenic Creativity Photos</a>
 <br><span><a href="https://en.wikipedia.org/wiki/Instagram" target="_blank">Instagram</a> Timeline</span></div>
 <div class="col">
+<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Portfolio.pdf" target="_blank">
+<img src="img/buttons/portfolio.png"></a>
+<a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Portfolio.pdf" target="_blank"><img src="img/icons/document.png"> Selected Portfolio</a>
+<br><span>Artworks Documentation</span></div><div class="col">
 <a href="https:/flickr.com/buttons/ecumenic/albums" target="_blank">
 <img src="img/buttons/flickr.png"></a>
 <a class="button" href="https:/flickr.com/buttons/ecumenic/albums" target="_blank"><img src="img/icons/flickr.png"> Performances & Visual Arts</a>
@@ -137,13 +141,7 @@
 <a href="https://ecumenictimes.threadless.com" target="_blank">
 <img src="img/buttons/threadless.png"></a>
 <a class="button" href="https://ecumenictimes.threadless.com" target="_blank"><img src="img/icons/threadless.png"> Artworks & Appareil Store</a>
-<br><span><a href="https://en.wikipedia.org/wiki/Threadless" target="_blank">Threadless</a> Shop</span></div>
-<div class="col">
-<a href="https://github.com/ecumenic/project" target="_blank">
-<img src="img/buttons/github.png"></a>
-<a class="button" href="https://github.com/ecumenic/project" target="_blank"><img src="img/icons/github.png"> Institutional Methodology</a>
-<br><span><a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">GitHub</a> Reliability Repository</span></div>
-</div></div>
+<br><span><a href="https://en.wikipedia.org/wiki/Threadless" target="_blank">Threadless</a> Shop</span></div></div></div>
 
 <!-- MEDIA -->
 <div id="media" class="container">
@@ -207,10 +205,15 @@
 <a class="button" href="https://github.com/ecumenic/project/blob/master/LICENSE" target="_blank"><img src="img/icons/document.png"> License Agreement</a>
 <br><span><a href="https://en.wikipedia.org/wiki/Creative_Commons" target="_blank">Creative Commons</a> 4.1</span></div></div>
 <div class="row">
-<h5><a href="https://linkedin.com/in/operarioribeiro" target="_blank">
+<div class="col"><a href="https://linkedin.com/in/operarioribeiro" target="_blank">
 <img src="img/buttons/operario.png"></a><br><b>Direction: </b><i>Felipe Ribeiro</i>
 <br><a href="https://bit.ly/operarioribeiro-bio" target="_blank">Biography</a> | <a href="https://bit.ly/operarioribeiro-resume" target="_blank">Resume</a> | <a href="https://linkedin.com/in/operarioribeiro">LinkedIn</a>
-</h5></div></div>
+</div>
+<div class="col">
+<a href="https://github.com/ecumenic/project" target="_blank">
+<img src="img/buttons/github.png"></a>
+<a class="button" href="https://github.com/ecumenic/project" target="_blank"><img src="img/icons/github.png"> Institutional Methodology</a>
+<br><span><a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">GitHub</a> Reliability Repository</span></div></div></div>
 
 <!-- SUPPORT US -->
 <div id="support" class="container">
