--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <div class="row">
 <div class="col"><a href="https://linkedin.com/in/operarioribeiro" target="_blank">
 <img src="img/buttons/operario.png"></a><br><b>Direction: </b><i>Felipe Ribeiro</i>
-<br><a href="https://bit.ly/operarioribeiro-bio" target="_blank">Biography</a> | <a href="https://bit.ly/operarioribeiro-resume" target="_blank">Resume</a> | <a href="https://linkedin.com/in/operarioribeiro">LinkedIn</a>
+<br><a href="https://bit.do/operarioribeiro-bio" target="_blank">Biography</a> | <a href="https://bit.do/operarioribeiro-resume" target="_blank">Resume</a> | <a href="https://linkedin.com/in/operarioribeiro">LinkedIn</a>
 </div>
 <div class="col">
 <a href="https://github.com/ecumenic/project" target="_blank">
