--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 <a href="https://gitlab.gnome.org/GNOME/gedit/" target="_blank">Gedit</a>, 
 <a href="https://www.gimp.org" target="_blank">GIMP</a>, 
 <a href="https://kbrsh.github.io/wing/" rel="nofollow" target="_blank">Wing CSS Framework</a>,
-<a target="_blank" href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a>, and
+<a target="_blank" href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a>, <a href="https://thenounproject.com">Noun Project Icons</a>, and
 <a href="https://www.flaticon.com/authors/pixel-perfect" target="_blank">PixelPerfect Social Icons</a></i></span>
 <br><br><b><i>All praises and glories to God.</i></b><br><br><br><br>&nbsp</h5></div>
 
