--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecosystem.pdf" target="_blank"><img src="img/icons/document.png"> Ecumenic Ecosystem</a>
 <br><span>Trends Indicators Report</span></div>
 <div class="col">
+<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocuratorship.pdf" target="_blank">
+<img src="img/buttons/ecocuratorship.png"></a>
+<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocuratorship.pdf"><img src="img/icons/document.png"> Ecumenic Ecocuratorship</a>
+<br><span>Crosscultural Heritage Research</span></div>
+<div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecomuseology.pdf" target="_blank">
 <img src="img/buttons/ecomuseology.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecomuseology.pdf" target="_blank"><img src="img/icons/document.png"> Ecumenic Ecomuseology</a>
@@ -104,8 +109,10 @@
 <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf" target="_blank">
 <img src="img/buttons/ecocreativity.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf"><img src="img/icons/document.png"> Ecumenic Creativity</a>
-<br><span>Ecoaesthetic Treatise</span></div>
+<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf"><img src="img/icons/document.png"> Ecumenic Ecocreativity</a>
+<br><span>Ecoaesthetic Treatise
+<br>Including An Ecomythologic Database</span></div>
+
 </div></div>
 
 <!-- PORTFOLIO -->
