--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf"><img src="img/icons/document.png"> Ecumenic Ecocreativity</a>
 <br><span>Ecoaesthetic Treatise
 <br>Including An Ecomythologic Database</span></div>
-
+<div class="col">
+<a href="https://github.com/ecumenic/project/tree/master/articles" target="_blank">
+<img src="img/buttons/articles.png"></a>
+<br><a class="button" href="https://github.com/ecumenic/project/tree/master/articles"><img src="img/icons/document.png"> Ecumenic Articles</a>
+<br><span>Academic Open Journal<br>
+Send coherent papers for <a href="#contact">review</a></span></div>
 </div></div>
 
 <!-- PORTFOLIO -->
