--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <div class="col">
 <a href="https://github.com/ecumenic/project/tree/master/articles" target="_blank">
 <img src="img/buttons/articles.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/tree/master/articles"><img src="img/icons/document.png"> Ecumenic Articles</a>
+<br><a class="button" href="https://github.com/ecumenic/project/tree/master/articles"><img src="img/icons/github.png"> Ecumenic Articles</a>
 <br><span>Academic Open Journal<br>
 Send coherent papers for <a href="#contact">review</a></span></div>
 </div></div>
