--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
 <br><a class="button" href="https://github.com/ecumenic/project/tree/master/articles"><img src="img/icons/github.png"> Ecumenic Articles</a>
 <br><span>Academic Open Journal<br>
 Send coherent papers for <a href="#contact">review</a></span></div>
+<div class="col">
+<a href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography.pdf" target="_blank">
+<img src="img/buttons/ecohistoriography.png"></a>
+<br><a class="button" href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography"><img src="img/icons/github.png"> Ecumenic Ecohistoriography</a>
+<br><span>Laic-Interfaith Historic Taxonomy</span></div>
 </div></div>
 
 <!-- PORTFOLIO -->
