Add existing file

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <p><b>How We Do It: </b>We research our partner institution environmental faith-inspiration and creativity culture site-specificities based on world compliance standards and select the best available processes in our vast flexible modular programs toolbox developing scheduled virtues-fostering collaborative programs fit to different time-lengths in open theoric and hands-on communitary artscraft workshops utilizing the most advanced techonologies and methodologies available.</p>
 <p><b>Which Products Flourish: </b>We have expertise producing sustainable educative programs, communitary roundtables and task-forces, media upcycling, data-scientific analysis and modelling, heritage historiographic ecotourism promotion, social curatorship, operatic performances, fine-arts productions, museologic exhibitions, experience design, merchandising conceptual shops, apps startup devops, and much more.</p>
 <p><b>How We Manage It: </b>We are organized as a transparent inclusive equal-opportunities based scalable dignified multimedia cultural productions collaborative development communitary enterprise that values admnistrative accountable auditorable reliability engineering publishing all our methods and corporative guidelines publicly.
-<p><b>What Is Our Quality Control: </b>We base our co-productions and enterprise multi-level governance to help our communities to thrive and flourish in rule-of-law global ethic laic and interfaith compliant standards charters from which we designed our institutional commitments, code of conduct, regenerative cultural ecosystem analytic procedures, ecomuseology program, and ecocreativity research.</p>
+<p><b>What Is Our Quality Control: </b>We base our co-productions and enterprise multi-level governance to help our communities to thrive and flourish in rule-of-law global ethic laic and interfaith compliant standards charters from which we designed our institutional commitments, code of conduct, regenerative cultural ecosystem analytic procedures, ecomuseology program, and ecopoethics research.</p>
 <h5>
 <a href="https://github.com/ecumenic/project/raw/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank"><img src="img/buttons/project.png"></a></h5>
 <div class="col">
@@ -106,12 +106,12 @@
 <img src="img/buttons/ecomuseology.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecomuseology.pdf" target="_blank"><img src="img/icons/document.png"> Ecumenic Ecomuseology</a>
 <br><span>Educational Program</span></div> 
-<div class="col">
-<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf" target="_blank">
-<img src="img/buttons/ecocreativity.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecocreativity.pdf"><img src="img/icons/document.png"> Ecumenic Ecocreativity</a>
+<!-- <div class="col">
+<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
+<img src="img/buttons/ecopoethics.png"></a>
+<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf"><img src="img/icons/document.png"> Ecumenic Ecopoethics</a>
 <br><span>Ecoaesthetic Treatise
-<br>Including An Ecomythologic Database</span></div>
+<br>Including An Ecomythologic Database</span></div> -->
 <div class="col">
 <a href="https://github.com/ecumenic/project/tree/master/articles" target="_blank">
 <img src="img/buttons/articles.png"></a>
@@ -253,8 +253,8 @@ Send coherent papers for <a href="#contact">review</a></span></div>
 <br><a class="button" href="#contact"><img src="img/icons/protonmail.png"> Propose A Partnership</a>
 <br><span>Mail by <a href="https://www.protonmail.com" target="_blank">Protonmail</a></span></div>
 <div class="col">
-<a href="#community"target="_blank"><img src="img/buttons/collaborate.png"></a>
-<br><a class="button" href="#community" target="_blank"><img src="img/icons/github.png"> Send Collaborations</a>
+<a href="#community"><img src="img/buttons/collaborate.png"></a>
+<br><a class="button" href="#community"><img src="img/icons/github.png"> Send Collaborations</a>
 <br><span><a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">GitHub</a> Development Platform</span></div></div></div>
 
 <!-- CONTACT -->
