--- a/index.html
+++ b/index.html
@@ -106,23 +106,27 @@
 <img src="img/buttons/ecomuseology.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecomuseology.pdf" target="_blank"><img src="img/icons/document.png"> Ecumenic Ecomuseology</a>
 <br><span>Educational Program</span></div> 
-<!-- <div class="col">
+<div class="col">
+<a href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography.pdf" target="_blank">
+<img src="img/buttons/ecohistoriography.png"></a>
+<br><a class="button" href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography"><img src="img/icons/github.png"> Ecumenic Ecohistoriography</a>
+<br><span>Laic-Interfaith Historic Taxonomy</span></div>
+<div class="col">
+<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
+<img src="img/buttons/ecologics.png"></a>
+<br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf"><img src="img/icons/document.png"> Ecumenic Ecologics</a>
+<br><span>Ecocultural Ontology Research</span></div>
+<div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
 <img src="img/buttons/ecopoethics.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf"><img src="img/icons/document.png"> Ecumenic Ecopoethics</a>
-<br><span>Ecoaesthetic Treatise
-<br>Including An Ecomythologic Database</span></div> -->
+<br><span>Ecoaesthetic Treatise</span></div>
 <div class="col">
 <a href="https://github.com/ecumenic/project/tree/master/articles" target="_blank">
 <img src="img/buttons/articles.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/tree/master/articles"><img src="img/icons/github.png"> Ecumenic Articles</a>
 <br><span>Academic Open Journal<br>
 Send coherent papers for <a href="#contact">review</a></span></div>
-<div class="col">
-<a href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography.pdf" target="_blank">
-<img src="img/buttons/ecohistoriography.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography"><img src="img/icons/github.png"> Ecumenic Ecohistoriography</a>
-<br><span>Laic-Interfaith Historic Taxonomy</span></div>
 </div></div>
 
 <!-- PORTFOLIO -->
