--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div class="col">
 <a href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography.pdf" target="_blank">
 <img src="img/buttons/ecohistoriography.png"></a>
-<br><a class="button" href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography"><img src="img/icons/github.png"> Ecumenic Ecohistoriography</a>
+<br><a class="button" href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography"><img src="img/icons/document.png"> Ecumenic Ecohistoriography</a>
 <br><span>Laic-Interfaith Historic Taxonomy</span></div>
 <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
