--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 <img src="img/buttons/ecohistoriography.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/tree/master/Ecumenic%20Ecohistoriography"><img src="img/icons/document.png"> Ecumenic Ecohistoriography</a>
 <br><span>Laic-Interfaith Historic Taxonomy</span></div>
-<div class="col">
+<!-- <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
 <img src="img/buttons/ecologics.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf"><img src="img/icons/document.png"> Ecumenic Ecologics</a>
-<br><span>Ecocultural Ontology Research</span></div>
+<br><span>Ecocultural Ontology Research</span></div> 
 <div class="col">
 <a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf" target="_blank">
 <img src="img/buttons/ecopoethics.png"></a>
 <br><a class="button" href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Ecopoethics.pdf"><img src="img/icons/document.png"> Ecumenic Ecopoethics</a>
-<br><span>Ecoaesthetic Treatise</span></div>
+<br><span>Ecoaesthetic Treatise</span></div> -->
 <div class="col">
 <a href="https://github.com/ecumenic/project/tree/master/articles" target="_blank">
 <img src="img/buttons/articles.png"></a>
